--- a/Entre Caçadores, Colossos e Baldurianos/.env.dev
+++ b/Entre Caçadores, Colossos e Baldurianos/.env.dev
@@ -2,7 +2,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
-DB_DATABASE='aquatech'
+DB_DATABASE='individual'
 DB_USER='root'
 DB_PASSWORD='linhadefrente'
 DB_PORT=3306
